# dovecot_plugin_syncer

./: .cproject  .gitignore  .project  Makefile.am  README.md  autobuild.sh  config-syncer.h.in  configure.ac  readme.md
m4/: readme.md
ref/: dovecot-config  readme.md
src/: Makefile.am  readme.md  syncer-plugin.c  syncer-plugin.h
test/: dovecot.sh  readme.md
test/etc/dovecot/: auth.conf  dovecot.conf  syncer-script.sh
tests/: Makefile.am  dovecot.sh
tests/etc/dovecot/: dovecot.conf  syncer-script.sh
