
AC_INIT([syncer-plugin], [15]) # name, version

AC_CONFIG_SRCDIR([src])
AC_CONFIG_MACRO_DIR([m4])

AM_INIT_AUTOMAKE([no-define foreign tar-ustar])
ACLOCAL_AMFLAGS='-I $(top_srcdir)/m4'
AC_SUBST(ACLOCAL_AMFLAGS)

# ignore 'default', include 'syncer'
AC_CONFIG_HEADERS([config-default.h config-syncer.h])

# inject custom plugin definitions
AC_DEFINE_UNQUOTED(SYNCER_NAME, "$PACKAGE_NAME", [syncer package name])
AC_DEFINE_UNQUOTED(SYNCER_VERSION, "$PACKAGE_VERSION", [syncer package version])
 
AM_MAINTAINER_MODE
PKG_PROG_PKG_CONFIG

AC_PROG_CC
AC_PROG_CPP
AC_PROG_LIBTOOL

DC_DOVECOT
DC_DOVECOT_MODULEDIR
LIBDOVECOT_INCLUDE="$LIBDOVECOT_INCLUDE $LIBDOVECOT_STORAGE_INCLUDE"
CFLAGS="$DOVECOT_CFLAGS -I\$(top_srcdir)"
LIBS="$DOVECOT_LIBS"
BINARY_CFLAGS="$DOVECOT_BINARY_CFLAGS"
BINARY_LDFLAGS="$DOVECOT_BINARY_LDFLAGS"
AC_SUBST(BINARY_CFLAGS)
AC_SUBST(BINARY_LDFLAGS)
AC_SUBST(LIBDOVECOT_INCLUDE)

AC_CONFIG_FILES([
    Makefile
    src/Makefile
    test/Makefile
])

AC_OUTPUT
